--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AltaPerspectiva</title>
+    <title>iHaz tu preguntas sobre negocios!</title>
 
     <script src="~/js/main.js"></script>
     <!-- 1. Load libraries -->
