--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashtab/dashtab.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/dashtab/dashtab.component.html
@@ -2,8 +2,8 @@
 <div class="tab-bar z-header">
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-tab">
-            <li class="nav-home"><a routerLink="/">View Rrofile</a></li>
-            <li class="nav-home"><a routerLink="/">Edit RPofile</a></li>
+            <li class="nav-home"><a routerLink="/dashboard/viewprofile">View Rrofile</a></li>
+            <li class="nav-home"><a routerLink="/dashboard/editprofile">Edit RPofile</a></li>
             <li class="nav-home"><a routerLink="/">Edit Project</a></li>
             <li class="nav-home"><a routerLink="/">Finance</a></li>
             <li class="nav-home"><a routerLink="/">Edit Settings</a></li>
